# docs/public/api/openapi-3.0.json
@@ -10,32 +10,6 @@
         "version": "1.0"
     },
     "paths": {
-        "/v1/actions/create-missing-thumbnails": {
-            "post": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
-                "description": "Creates thumbnails for items that are missing them",
-                "tags": [
-                    "Actions"
-                ],
-                "summary": "Create Missing Thumbnails",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/v1.ActionAmountResult"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/v1/actions/ensure-asset-ids": {
             "post": {
                 "security": [
@@ -74,94 +48,6 @@
                     "Actions"
                 ],
                 "summary": "Ensures Import Refs",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/v1.ActionAmountResult"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/actions/set-primary-photos": {
-            "post": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
-                "description": "Sets the first photo of each item as the primary photo",
-                "tags": [
-                    "Actions"
-                ],
-                "summary": "Set Primary Photos",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/v1.ActionAmountResult"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/actions/wipe-inventory": {
-            "post": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
-                "description": "Deletes all items in the inventory",
-                "tags": [
-                    "Actions"
-                ],
-                "summary": "Wipe Inventory",
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/v1.WipeInventoryOptions"
-                            }
-                        }
-                    },
-                    "description": "Wipe options"
-                },
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/v1.ActionAmountResult"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/actions/zero-item-time-fields": {
-            "post": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
-                "description": "Resets all item date fields to the beginning of the day",
-                "tags": [
-                    "Actions"
-                ],
-                "summary": "Zero Out Time Fields",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -5334,7 +5220,17 @@
                         "description": "Container-specific (populated when querying locations)",
                         "type": "number"
                     },
+                    "manufacturer": {
+                        "type": "string"
+                    },
+                    "modelNumber": {
+                        "type": "string"
+                    },
                     "name": {
+                        "type": "string"
+                    },
+                    "notes": {
+                        "description": "Extras",
                         "type": "string"
                     },
                     "parent": {
@@ -5347,11 +5243,22 @@
                         "x-omitempty": true,
                         "nullable": true
                     },
+                    "purchaseDate": {
+                        "description": "Purchase",
+                        "type": "string"
+                    },
+                    "purchaseFrom": {
+                        "type": "string"
+                    },
                     "purchasePrice": {
                         "type": "number"
                     },
                     "quantity": {
                         "type": "number"
+                    },
+                    "serialNumber": {
+                        "description": "Identifications",
+                        "type": "string"
                     },
                     "soldDate": {
                         "description": "Sale details",
@@ -6795,20 +6702,6 @@
                     },
                     "token": {
                         "type": "string"
-                    }
-                }
-            },
-            "v1.WipeInventoryOptions": {
-                "type": "object",
-                "properties": {
-                    "wipeLocations": {
-                        "type": "boolean"
-                    },
-                    "wipeMaintenance": {
-                        "type": "boolean"
-                    },
-                    "wipeTags": {
-                        "type": "boolean"
                     }
                 }
             },
